# lib_LTLIBRARIES=libts-split.la
# libts-split_la_SOURCES=ts-split.c ts-split_bits.c ts-split_filename.c
# libts-split_la_LDFLAGS=-version-info 1:0:0
# include_HEADERS=ts-split.h

bin_PROGRAMS=tssplit
tssplit_SOURCES=tssplit.c
# rfcat_LDADD=libts-split.la

# ts-split_struct.c ts-split_struct.h: ts-split.h ../tools/serializator.pl
#         $(PERL) ../tools/serializator.pl -c ts-split_struct.c -h ts-split_struct.h ts-split.h

# ts-split.c: ts-split_struct.c ts-split_struct.h
