# AUTOMAKE_OPTIONS=-Wno-portability
# noinst_PROGRAMS=basic refs filename
# noinst_LIBRARIES=libtest.a
# basic_SOURCES=basic.c
# basic_LDADD=libtest.a ../src/libts-split.la
# refs_SOURCES=refs.c
# refs_LDADD=libtest.a ../src/libts-split.la
# filename_SOURCES=filename.c
# filename_LDADD=libtest.a ../src/libts-split.la
# libtest_a_SOURCES=tap.c testutil.c
# AM_CFLAGS+=-I../src

# check: all
#         $(PROVE) -e '' $(addprefix ./, $(noinst_PROGRAMS))
